project(flake)

include_directories(${FLAKE_INCLUDES} ${QT_INCLUDES})

if(KDE4_BUILD_TESTS)
    # only with this definition will the FLAKE_TEST_EXPORT macro do something
    add_definitions(-DCOMPILING_TESTS)
endif(KDE4_BUILD_TESTS)

if( QCA2_FOUND )
    include_directories( ${QCA2_INCLUDE_DIR} )
    add_definitions( -DQCA2 )
endif( QCA2_FOUND )

add_subdirectory(tests)
add_subdirectory(pics)

set(flake_SRCS
    KFlake.cpp
    KCanvasBase.cpp
    KResourceManager.cpp
    KCanvasObserverBase.cpp
    KCanvasSupervisor.cpp
    KCutController.cpp
    KCopyController.cpp
    KDockFactoryBase.cpp
    KDockRegistry.cpp
    KDataCenterBase.cpp
    KInsets.cpp
    KPasteController.cpp
    KGuidesData.cpp
    KPathShape.cpp
    KPathPoint.cpp
    KPathPointData.cpp
    KPathSegment.cpp
    KShapeSelection.cpp
    KShape.cpp
    KShapeConnection.cpp
    KShapeConnectionPolicy.cpp
    KShapeControllerBase.cpp
    KShapeApplicationData.cpp
    KShapeContainer.cpp
    KShapeContainerModel.cpp
    KShapeContainerDefaultModel.cpp
    KShapeGroup.cpp
    KShapeManagerPaintingStrategy.cpp
    KShapeManager.cpp
    KShapePainter.cpp
    KFrameShape.cpp
    KToolBase.cpp
    KCanvasController.cpp
    KCanvasController_p.cpp
    KShapeRegistry.cpp
    KToolFactoryBase.cpp
    KPathShapeFactory.cpp
    KShapeFactoryBase.cpp
    KShapeUserData.cpp
    KPointGroup.cpp
    KParameterShape.cpp
    KPointerEvent.cpp
    KShapeController.cpp
    KToolSelection.cpp
    KShapeLayer.cpp
    KPostscriptPaintDevice.cpp
    KInputDevice.cpp
    KToolManager_p.cpp
    KToolManager.cpp
    KToolRegistry.cpp
    KToolProxy.cpp
    KShapeSavingContext.cpp
    KShapeLoadingContext.cpp
    KLoadingShapeUpdater.cpp
    KPathShapeLoader.cpp
    ShapeDeleter_p.cpp
    KShapeBorderBase.cpp
    KShapeBorderFactoryBase.cpp
    KShapeBorderRegistry.cpp
    KLineBorder.cpp
    KLineBorderFactory.cpp
    KShapeBackgroundBase.cpp
    KColorBackground.cpp
    KGradientBackground.cpp
    KPatternBackground.cpp
    KShapeConfigWidgetBase.cpp
    KDrag.cpp
    KDragOdfSaveHelper.cpp
    KShapeOdfSaveHelper.cpp
    KShapePaste.cpp
    KSnapGuide.cpp
    KSnapProxy.cpp
    KSnapStrategy.cpp
    SnapGuideConfigWidget.cpp
    KShapeShadow.cpp
    KSharedSavingData.cpp
    KSharedLoadingData.cpp
    KViewConverter.cpp
    KEventAction.cpp
    KEventActionFactoryBase.cpp
    KEventActionRegistry.cpp
    KImageData.cpp
    KImageData_p.cpp
    KImageCollection.cpp
    KOdfWorkaround.cpp
    KFilterEffect.cpp
    KFilterEffectStack.cpp
    KFilterEffectFactoryBase.cpp
    KFilterEffectRegistry.cpp
    KFilterEffectConfigWidgetBase.cpp
    KFilterEffectRenderContext.cpp
    KFilterEffectLoadingContext.cpp
    KTextOnShapeContainer.cpp
    KTextShapeDataBase.cpp
    KoPluginLoader.cpp
    commands/KShapeGroupCommand.cpp
    commands/KShapeAlignCommand.cpp
    commands/KShapeBackgroundCommand.cpp
    commands/KShapeBorderCommand.cpp
    commands/KShapeCreateCommand.cpp
    commands/KShapeDeleteCommand.cpp
    commands/KShapeDistributeCommand.cpp
    commands/KShapeLockCommand.cpp
    commands/KShapeMoveCommand.cpp
    commands/KShapeShearCommand.cpp
    commands/KShapeSizeCommand.cpp
    commands/KShapeUngroupCommand.cpp
    commands/KShapeReorderCommand.cpp
    commands/KShapeKeepAspectRatioCommand.cpp
    commands/KPathBaseCommand.cpp
    commands/KPathPointMoveCommand.cpp
    commands/KPathControlPointMoveCommand.cpp
    commands/KPathPointTypeCommand.cpp
    commands/KPathPointRemoveCommand.cpp
    commands/KPathPointInsertCommand.cpp
    commands/KPathSegmentBreakCommand.cpp
    commands/KPathBreakAtPointCommand.cpp
    commands/KPathSegmentTypeCommand.cpp
    commands/KPathCombineCommand.cpp
    commands/KPathSeparateCommand.cpp
    commands/KSubpathRemoveCommand.cpp
    commands/KSubpathJoinCommand.cpp
    commands/KParameterHandleMoveCommand.cpp
    commands/KParameterToPathCommand.cpp
    commands/KShapeTransformCommand.cpp
    commands/KPathFillRuleCommand.cpp
    commands/KShapeShadowCommand.cpp
    commands/KPathReverseCommand.cpp
    commands/KEventActionAddCommand.cpp
    commands/KEventActionRemoveCommand.cpp
    commands/KShapeRenameCommand.cpp
    commands/KPathPointMergeCommand.cpp
    commands/KShapeTransparencyCommand.cpp
    tools/KCreatePathTool.cpp
    tools/KCreatePathToolFactory.cpp
    tools/KCreateShapeStrategy.cpp
    tools/KPathToolFactory.cpp
    tools/KPathTool.cpp
    tools/KPathToolSelection.cpp
    tools/KPathToolHandle.cpp
    tools/PathToolOptionWidget.cpp
    tools/KPathPointRubberSelectStrategy.cpp
    tools/KPathPointMoveStrategy.cpp
    tools/KPathControlPointMoveStrategy.cpp
    tools/KParameterChangeStrategy.cpp
    tools/KZoomTool.cpp
    tools/KZoomToolFactory.cpp
    tools/KZoomToolWidget.cpp
    tools/KZoomStrategy.cpp
    tools/KPanTool.cpp
    tools/KPanToolFactory.cpp
    tools/KInteractionTool.cpp
    tools/KInteractionStrategy.cpp
    tools/KCreateShapesTool.cpp
    tools/KCreateShapesToolFactory.cpp
    tools/KShapeRubberSelectStrategy.cpp
    tools/KPathSegmentChangeStrategy.cpp
    odf/KOdfBorders.cpp
    odf/DirectoryStore.cpp
    odf/KOdfEmbeddedDocumentSaver.cpp
    odf/EncryptedStore.cpp
    odf/KOdfFontData.cpp
    odf/KOdfGenericChange.cpp
    odf/KOdfGenericChanges.cpp
    odf/KOdfGenericStyle.cpp
    odf/KOdfGenericStyles.cpp
    odf/KOdfSettings.cpp
    odf/KOdf.cpp
    odf/KOdfDocumentBase.cpp
    odf/KOdfGraphicStyles.cpp
    odf/KOdfLoadingContext.cpp
    odf/KOdfNumberStyles.cpp
    odf/KOdfPasteBase.cpp
    odf/KOdfStoreReader.cpp
    odf/KOdfStylesReader.cpp
    odf/KOdfWriteStore.cpp
    odf/KOdfPageFormat.cpp
    odf/KOdfPageLayoutData.cpp
    odf/KProperties.cpp
    odf/KOdfStore.cpp
    odf/KOdfStorageDevice.cpp
    odf/KOdfStyleStack.cpp
    odf/TarStore.cpp
    odf/KUnit.cpp
    odf/KOdfXmlNS.cpp
    odf/KXmlReader.cpp
    odf/KXmlWriter.cpp
    odf/ZipStore.cpp
)

kde4_add_ui_files(flake_SRCS
    tools/PathToolOptionWidget.ui
    SnapGuideConfigWidget.ui
    tools/KZoomToolWidget.ui
)

kde4_add_library(kflake SHARED ${flake_SRCS})

target_link_libraries(kflake ${KDE4_KDEUI_LIBS} ${KDE4_KIO_LIBS})
target_link_libraries(kflake LINK_INTERFACE_LIBRARIES ${KDE4_KIO_LIBS})

if( QCA2_FOUND )
    target_link_libraries(kflake ${QCA2_LIBRARIES})
endif( QCA2_FOUND )

set_target_properties(kflake PROPERTIES
    VERSION ${GENERIC_KOFFICE_LIB_VERSION} SOVERSION ${GENERIC_KOFFICE_LIB_SOVERSION}
)

########### install files ###############

install(TARGETS kflake  ${INSTALL_TARGETS_DEFAULT_ARGS})
install( FILES
    flake.desktop
    flaketool.desktop
    flakeshape.desktop
    presentationeventaction.desktop
    scripteventaction.desktop
    filtereffect.desktop
    DESTINATION ${SERVICETYPES_INSTALL_DIR})

install(
    FILES
    commands/KShapeAlignCommand.h
    commands/KShapeBackgroundCommand.h
    commands/KShapeBorderCommand.h
    commands/KShapeCreateCommand.h
    commands/KShapeDeleteCommand.h
    commands/KShapeDistributeCommand.h
    commands/KShapeGroupCommand.h
    commands/KShapeKeepAspectRatioCommand.h
    commands/KShapeLockCommand.h
    commands/KShapeMoveCommand.h
    commands/KShapeRenameCommand.h
    commands/KShapeReorderCommand.h
    commands/KShapeShearCommand.h
    commands/KShapeSizeCommand.h
    commands/KShapeTransformCommand.h
    commands/KShapeTransparencyCommand.h
    commands/KShapeUngroupCommand.h
    flake_export.h
    KCanvasBase.h
    KCanvasController.h
    KCanvasObserverBase.h
    KColorBackground.h
    KCopyController.h
    KCutController.h
    KDataCenterBase.h
    KDockFactoryBase.h
    KDockRegistry.h
    KDrag.h
    KDragOdfSaveHelper.h
    KFlake.h
    KFrameShape.h
    KGradientBackground.h
    KGuidesData.h
    KImageCollection.h
    KImageData.h
    KInputDevice.h
    KInsets.h
    KLineBorder.h
    KLoadingShapeUpdater.h
    KOdfWorkaround.h
    KPasteController.h
    KPatternBackground.h
    KPointerEvent.h
    KPostscriptPaintDevice.h
    KResourceManager.h
    KRTree.h
    KShapeSelection.h
    KShapeApplicationData.h
    KShapeBackgroundBase.h
    KShapeBorderBase.h
    KShapeBorderFactoryBase.h
    KShapeBorderRegistry.h
    KShapeConfigWidgetBase.h
    KShapeConnection.h
    KShapeConnectionPolicy.h
    KShapeContainerDefaultModel.h
    KShapeContainer.h
    KShapeContainerModel.h
    KShapeControllerBase.h
    KShapeController.h
    KShapeFactoryBase.h
    KShapeGroup.h
    KShape.h
    KShapeLayer.h
    KShapeLoadingContext.h
    KShapeManager.h
    KShapeManagerPaintingStrategy.h
    KShapeOdfSaveHelper.h
    KShapePaste.h
    KShapeRegistry.h
    KShapeSavingContext.h
    KShapeUserData.h
    KSharedLoadingData.h
    KSharedSavingData.h
    KSnapGuide.h
    KTextShapeDataBase.h
    KToolBase.h
    KToolFactoryBase.h
    KToolManager.h
    KToolProxy.h
    KToolRegistry.h
    KToolSelection.h
    KViewConverter.h
    tools/KCreateShapesTool.h
    tools/KInteractionStrategy.h
    tools/KInteractionTool.h
    tools/KShapeRubberSelectStrategy.h
    odf/KOdf.h
    odf/KOdfXmlNS.h
    odf/KOdfGenericStyle.h
    odf/KOdfGenericStyles.h
    odf/KOdfFontData.h
    odf/KOdfLoadingContext.h
    odf/KOdfSettings.h
    odf/KOdfStylesReader.h
    odf/KOdfPasteBase.h
    odf/KOdfStoreReader.h
    odf/KOdfWriteStore.h
    odf/KOdfStyleStack.h
    odf/KOdfDocumentBase.h
    odf/KOdfGenericChange.h
    odf/KOdfGenericChanges.h
    odf/KOdfEmbeddedDocumentSaver.h
    odf/KOdfBorders.h
    odf/KOdfPageLayoutData.h
    odf/KOdfPageFormat.h
    odf/KOdfColumnData.h
    odf/KOdfStore.h
    odf/KOdfStorageDevice.h
    odf/KXmlReader.h
    odf/KXmlWriter.h
    odf/KProperties.h
    odf/KUnit.h

    DESTINATION
    ${INCLUDE_INSTALL_DIR} COMPONENT Devel
)

install(
    FILES
    KFilterEffectConfigWidgetBase.h
    KFilterEffectFactoryBase.h
    KFilterEffect.h
    KFilterEffectLoadingContext.h
    KFilterEffectRegistry.h
    KFilterEffectRenderContext.h
    KFilterEffectStack.h
    KEventActionFactoryBase.h
    KEventAction.h
    KEventActionRegistry.h
    KParameterShape.h
    KPathPointData.h
    KPathPoint.h
    KPathSegment.h
    KPathShape.h
    KPathShapeLoader.h
    KShapePainter.h
    KTextOnShapeContainer.h
    KoPluginLoader.h
    KShapeShadow.h
    KCanvasSupervisor.h

    commands/KEventActionAddCommand.h
    commands/KEventActionRemoveCommand.h
    commands/KParameterToPathCommand.h
    commands/KPathCombineCommand.h
    commands/KPathControlPointMoveCommand.h
    commands/KPathFillRuleCommand.h
    commands/KPathPointInsertCommand.h
    commands/KPathPointMergeCommand.h
    commands/KPathPointMoveCommand.h
    commands/KPathPointRemoveCommand.h
    commands/KPathReverseCommand.h
    commands/KPathSegmentTypeCommand.h
    commands/KPathSeparateCommand.h
    commands/KShapeShadowCommand.h
    commands/KSubpathRemoveCommand.h

    DESTINATION
    ${INCLUDE_INSTALL_DIR}/private COMPONENT Devel
)
